# my_submodule_lib_2

./: .gitmodules  CMakeLists.txt  README.md
src/: bar.cpp
